<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_ip_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_large_margin"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="@dimen/default_card_corners"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="400dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_ip_title"
                style="@style/toolbar_title"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_ip_title"/>

            <TextView
                android:id="@+id/login_ip_error"
                style="@style/font_error"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_invalid_ip"
                android:visibility="gone"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_large_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:hint="@string/login_ip_server"
                android:theme="@style/TextInputField"
                android:background="@drawable/backrgound_inputfield"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEditText"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_large_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:hint="@string/login_ip_port"
                android:theme="@style/TextInputField"
                android:background="@drawable/backrgound_inputfield"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_ip_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:ems="4"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                style="@style/make_clickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_large_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:cardCornerRadius="@dimen/default_card_corners"
                app:cardElevation="@dimen/cardview_default_elevation">

                <TextView
                    android:id="@+id/login_ip_save_button"
                    style="@style/text_button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:minWidth="160dp"
                    android:text="@string/button_save" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>