<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account_bottom_sheet"
    android:layout_gravity="center_horizontal"
    style="@style/bottomsheet_style"
    app:cardCornerRadius="@dimen/bottomsheet_corners"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_create_acct"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/todoo_close_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:backgroundTint="@color/primaryColor"
                app:fabSize="mini"
                app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
                app:rippleColor="@color/primaryTextColor"
                app:tint="@color/primaryTextColor"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>



            <ProgressBar
                android:id="@+id/create_loading_progress"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/todoo_close_fab"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_margin="18dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/create_acct_error"
                style="@style/font_error"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                tools:text="Error, try again"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/create_loading_progress"/>

            <TextView
                android:id="@+id/create_acct_title"
                style="@style/font_todo_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="48dp"
                android:text="@string/create_user_title"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/create_loading_progress"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:hint="@string/create_username"
            android:theme="@style/TextInputField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:hint="@string/create_email"
            android:theme="@style/TextInputField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:hint="@string/create_password"
            android:theme="@style/TextInputField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:hint="@string/create_confirm_pass"
            android:theme="@style/TextInputField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            style="@style/make_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:cardCornerRadius="@dimen/default_card_corners"
            app:cardElevation="@dimen/cardview_default_elevation">

            <TextView
                android:id="@+id/create_account_button"
                style="@style/text_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:minWidth="200dp"
                android:text="@string/login_login_create" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>