<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_large_margin"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="@dimen/default_card_corners"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="400dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_error"
                style="@style/font_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Error, try again" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_large_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:hint="@string/login_email"
                android:theme="@style/TextInputField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapWords"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_large_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:hint="@string/login_password"
                android:theme="@style/TextInputField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_status_text"
                android:layout_marginStart="@dimen/default_large_margin"
                android:layout_marginEnd="@dimen/default_large_margin"
                android:textColor="@color/primaryTextColor"
                android:text="@string/login_remember_device"
                android:gravity="center_vertical"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    style="@style/make_clickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/default_large_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    app:cardCornerRadius="@dimen/default_card_corners"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <TextView
                        android:id="@+id/login_button"
                        style="@style/text_button_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:background="@drawable/background_button"
                        android:gravity="center"
                        android:minWidth="160dp"
                        android:text="@string/login_login_button" />

                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/login_flip_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:src="@drawable/ic_flip"
                    app:backgroundTint="@color/primaryColor"
                    app:fabSize="mini"
                    app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
                    android:layout_gravity="end|center_vertical"
                    app:rippleColor="@color/primaryTextColor"
                    app:tint="@color/primaryTextColor" />

            </FrameLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>